# 3D-Bildverarbeitung

./: CMakeCache.txt  CMakeLists.txt  Makefile  aufgabe1  aufgabe1.cpp  cmake_install.cmake  yourProgram
PCL/1.3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matrix_transform  matrix_transform.cpp
PCL/1.4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filtering  statistical_removal.cpp
PCL/1.5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  normal_estimation  normal_estimation.cpp
Stereo_calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  out_camera2_data.xml  out_camera_data.xml  stereo_camera_calib  stereo_camera_calib.cpp
camera2/: CMakeCache.txt  CMakeLists.txt  Makefile  camera2_calib  camera2_calib.cpp  camera2settings.xml  cmake_install.cmake  out_camera2_data.xml
ex1_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filters  filters.cpp
ex1_3/: CMakeCache.txt  CMakeLists.txt  Makefile  calibration.cpp  camera_calib  cmake_install.cmake  default.xml  image.xml  out_camera_data.xml
feature_detection/: CMakeLists.txt  feature_detection.cpp
optical_flow/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  optical_flow  optical_flow.cpp
stereo_trial2/: CMakeCache.txt  CMakeLists.txt  Makefile  Stereoresults.xml  camera1_input.xml  camera2_input.xml  cmake_install.cmake  out_camera1_data.xml  out_camera2_data.xml  stereo_camera_calib2  stereo_camera_calib2.cpp
